@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with pound.  If not, see <http://www.gnu.org/licenses/>.
 
-AT_SETUP([Dynamic ACL])
+AT_SETUP([ACL])
 AT_KEYWORDS([cond dyncond acl dynacl])
 m4_pushdef([HARNESS_OPTIONS],[--source-address=127.0.0.2 dnl
  --source-address=127.0.0.3 dnl
