@@ -1,0 +1,67 @@
+# This file is part of pound testsuite. -*- autotest -*-
+# Copyright (C) 2024-2025 Sergey Poznyakoff
+#
+# Pound is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# Pound is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with pound.  If not, see <http://www.gnu.org/licenses/>.
+AT_SETUP([BasicAuth])
+AT_KEYWORDS([cond dyncond basicauth BasicAuth dynbauth])
+AT_DATA([htpass],
+[gray:guessMe
+])
+PT_CHECK([WatcherTTL 1
+ListenHTTP
+	Service "auth"
+		Not BasicAuth "htpass"
+		Rewrite response
+			SetHeader "WWW-Authenticate: Basic realm=\"Restricted access\""
+		End
+		Error 401
+	End
+	Service
+		Backend
+			Address
+			Port
+		End
+	End
+End	
+],	
+[GET /echo/foo
+Host: example.org
+end
+
+401
+WWW-Authenticate: Basic realm="Restricted access"
+end
+
+GET /echo/foo
+Host: example.org
+Authorization: Basic Z3JheTpndWVzc01l
+end
+
+200
+end
+
+run echo gray:anotherPass > htpass
+logtail "file reloaded"
+end
+
+GET /echo/foo
+Host: example.org
+Authorization: Basic Z3JheTphbm90aGVyUGFzcw==
+end
+
+200
+end
+])
+AT_CLEANUP
+
