@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with pound.  If not, see <http://www.gnu.org/licenses/>.
 
-AT_SETUP([Dynamic pattern files])
+AT_SETUP([Pattern files])
 AT_KEYWORDS([cond dyncond pattern dynpat])
 
 AT_DATA([input],
