@@ -13,7 +13,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with pound.  If not, see <http://www.gnu.org/licenses/>.
-AT_SETUP([Dynamic named ACL])
+AT_SETUP([Named ACL])
 AT_KEYWORDS([cond dyncond acl named_acl dyn_named_acl ndynacl])
 m4_pushdef([HARNESS_OPTIONS],[--source-address=127.0.0.2 dnl
  --source-address=127.0.0.3 dnl
